<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    tools:context=".Configuration"
=======

>>>>>>> 7d47b4c70fcd88dae2b014d0226a19841552420e
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:baselineAligned="false"
        >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                >

                    <TextView
                        android:id="@+id/RecognizePanel"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/recognize_mode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                    />

                    <RadioGroup
                        android:id="@+id/ViewMode"
                        android:layout_width="306dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="@+id/RecognizePanel"
                        app:layout_constraintTop_toBottomOf="@+id/RecognizePanel"
                    >

                        <RadioButton
                            android:id="@+id/RecognizeModeList"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recognize_mode_list"
                        />

                        <RadioButton
                            android:id="@+id/RecognizeModeGrid"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recognize_mode_grid"
                        />
                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/RacesCheckbox"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/recognize_mode_races"
                        app:layout_constraintStart_toStartOf="@+id/ViewMode"
                        app:layout_constraintTop_toBottomOf="@+id/ViewMode"
                    />

                    <CheckBox
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:id="@+id/CoatsCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:text="@string/recognize_mode_coats"
                        app:layout_constraintStart_toEndOf="@+id/RacesCheckbox"
                        app:layout_constraintTop_toTopOf="@+id/RacesCheckbox"
                    />

                    <CheckBox
                        android:id="@+id/CrossesCheckbox"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginStart="25dp"
                        android:text="@string/recognize_mode_crosses"
                        app:layout_constraintStart_toEndOf="@+id/CoatsCheckbox"
                        app:layout_constraintTop_toTopOf="@+id/CoatsCheckbox"
                    />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                >

                    <TextView
                        android:id="@+id/MinigamePanel"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/minigame"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                    />

                    <RadioGroup
                        android:id="@+id/Minigame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="@+id/MinigamePanel"
                        app:layout_constraintTop_toBottomOf="@+id/MinigamePanel"
                    >

                        <RadioButton
                            android:id="@+id/MinigameRacesCoats"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minigame_races_coats"
                        />

                        <RadioButton
                            android:id="@+id/MinigameRacesAndCoats"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minigame_races_and_coats"
                        />

                        <RadioButton
                            android:id="@+id/MinigameCrosses"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minigame_crosses"
                        />
                    </RadioGroup>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:baselineAligned="false"
        >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                >

                    <TextView
                        android:id="@+id/InteractionModePanel"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/interaction_mode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                    />

                    <RadioGroup
                        android:id="@+id/InteractionMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="@+id/InteractionModePanel"
                        app:layout_constraintTop_toBottomOf="@+id/InteractionModePanel"
                    >

                        <RadioButton
                            android:id="@+id/InteractionModeA"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/interaction_mode_a"
                        />

                        <RadioButton
                            android:id="@+id/InteractionModeB"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/interaction_mode_b"
                        />

                        <RadioButton
                            android:id="@+id/InteractionModeC"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/interaction_mode_c"
                        />
                    </RadioGroup>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                >

                    <TextView
                        android:id="@+id/SettingsPanel"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                    />

                    <Switch
                        android:id="@+id/Level"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:switchMinWidth="100dp"
                        android:text="@string/level_1"
                        app:layout_constraintStart_toStartOf="@+id/SettingsPanel"
                        app:layout_constraintTop_toBottomOf="@+id/SettingsPanel"
                    />
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:id="@+id/LevelView"
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:text="@string/level_2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/Level"
                        app:layout_constraintStart_toEndOf="@+id/Level"
                    />

                    <Switch
                        android:id="@+id/Sex"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:switchMinWidth="100dp"
                        android:text="@string/male"
                        app:layout_constraintEnd_toEndOf="@+id/Level"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/Level"
                        app:layout_constraintTop_toBottomOf="@+id/Level"
                    />

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:id="@+id/SexView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:text="@string/female"
                        app:layout_constraintBaseline_toBaselineOf="@+id/Sex"
                        app:layout_constraintStart_toEndOf="@+id/Sex"
                    />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
        >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            >

                <Button
                    android:id="@+id/ConfirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/colorPrimary"
                    android:onClick="onAccept"
                    android:text="@string/confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

